# AutoMLBinaryClassification

./: .gitignore  README.md  config.yaml.example  pyproject.toml
src/: main.py
src/modules/: automl.py
src/utils/: create_folders.py
