[project]
name = "automl"
version = "0.1.0"
description = "AutoML Project"
authors = [
    {name = "romulolass",email = "romulolassoares@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
